feat: initialize TodoApp with React and Parcel
- Added package.json with dependencies for React, ReactDOM, and Parcel.
- Created App.js component for managing tasks with add and delete functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 /Day_5/node_modules/
 /Day_5/dist/
 /Day_5/.parcel-cache/
+
+/Day_6/node_modules/
+/Day_6/dist/
+/Day_6/.parcel-cache/
+
+/TodoApp/node_modules/
+/TodoApp/dist/
+/TodoApp/.parcel-cache/
+
