--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,3 @@
-/Day_2/node_modules/
-/Day_2/dist/
-/Day_2/.parcel-cache/
-
-/Day_3/node_modules/
-/Day_3/dist/
-/Day_3/.parcel-cache/
-
-/Day_4/node_modules/
-/Day_4/dist/
-/Day_4/.parcel-cache/
-
-/Day_5/node_modules/
-/Day_5/dist/
-/Day_5/.parcel-cache/
-
-/Day_6/node_modules/
-/Day_6/dist/
-/Day_6/.parcel-cache/
-
-/TodoApp/node_modules/
-/TodoApp/dist/
-/TodoApp/.parcel-cache/
-
-/StopWatch/node_modules/
-/StopWatch/dist/
-/StopWatch/.parcel-cache/
-
-/Day_7/node_modules/
-/Day_7/dist/
-/Day_7/.parcel-cache/
+*/node_modules/
+*/dist/
+*/.parcel-cache/
